# the-atlas

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
.github/: copilot-instructions.md
.github/instructions/: copilot-instructions.md
docs/: codedoc-ai-agent-architecture.md
examples/: code_analysis_example.py  complete_project_analysis_test.py  crewai_agent_test.py
src/codedoc_agent/: __init__.py  main.py
src/codedoc_agent/agents/: __init__.py
src/codedoc_agent/agents/file_analysis_crew/: __init__.py  file_analysis_crew.py
src/codedoc_agent/agents/file_analysis_crew/config/: agents.yaml  tasks.yaml
src/codedoc_agent/agents/project_overview_crew/: __init__.py  project_overview_crew.py
src/codedoc_agent/agents/project_overview_crew/config/: agents.yaml  tasks.yaml
src/codedoc_agent/analysis/: __init__.py  code_analyzer.py  file_classifier.py  file_content_reader.py  language_analyzer.py  models.py
src/codedoc_agent/tools/: __init__.py  git_integration.py
tests/: test_git_integration.py
