[project]
name = "codedoc-agent"
version = "0.1.0"
description = "AI Agent for analyzing source code and generating comprehensive documentation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "crewai>=0.80.0",
    "gitpython>=3.1.40",
    "fastapi>=0.110.0",
    "uvicorn>=0.30.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "markdown>=3.6",
    "pyyaml>=6.0",
    "click>=8.1.0",
    "crewai-tools>=0.71.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[project.scripts]
codedoc = "codedoc_agent.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/codedoc_agent"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
